Fixing about-me spacing when width < 850px

--- a/index.css
+++ b/index.css
@@ -84,6 +84,11 @@
     font-size: 18px;
 }
 
+.about-me-break {
+    display: none;
+}
+
+
 .white-container {
     background-color:#FFF;
     padding-top: 10px;
@@ -147,6 +152,13 @@
 @media screen and (max-width: 810px) {
     .about-me-section {
         width: 80%;
+    }
+    .inline-spacing {
+        display: none;
+    }
+    .about-me-break {
+        display: block;
+        border: none;
     }
     .specialty-button-row button {
         width: 100%;
